; ModuleID = '/home/carl/AnghaBench/tig/src/extr_prompt.c_prompt_default_handler.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_prompt.c_prompt_default_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input = type { i32*, i32 }
%struct.key = type { i32 }

@INPUT_STOP = common dso_local global i32 0, align 4
@INPUT_CANCEL = common dso_local global i32 0, align 4
@INPUT_DELETE = common dso_local global i32 0, align 4
@INPUT_SKIP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @prompt_default_handler(%struct.input* %0, %struct.key* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.input*, align 8
  %5 = alloca %struct.key*, align 8
  store %struct.input* %0, %struct.input** %4, align 8
  store %struct.key* %1, %struct.key** %5, align 8
  %6 = load %struct.key*, %struct.key** %5, align 8
  %7 = call i32 @key_to_value(%struct.key* %6)
  switch i32 %7, label %39 [
    i32 128, label %8
    i32 130, label %8
    i32 10, label %8
    i32 131, label %25
    i32 129, label %37
  ]

8:                                                ; preds = %2, %2, %2
  %9 = load %struct.input*, %struct.input** %4, align 8
  %10 = getelementptr inbounds %struct.input, %struct.input* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %19, label %14

14:                                               ; preds = %8
  %15 = load %struct.input*, %struct.input** %4, align 8
  %16 = getelementptr inbounds %struct.input, %struct.input* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %14, %8
  %20 = load i32, i32* @INPUT_STOP, align 4
  br label %23

21:                                               ; preds = %14
  %22 = load i32, i32* @INPUT_CANCEL, align 4
  br label %23

23:                                               ; preds = %21, %19
  %24 = phi i32 [ %20, %19 ], [ %22, %21 ]
  store i32 %24, i32* %3, align 4
  br label %41

25:                                               ; preds = %2
  %26 = load %struct.input*, %struct.input** %4, align 8
  %27 = getelementptr inbounds %struct.input, %struct.input* %26, i32 0, i32 0
  %28 = load i32*, i32** %27, align 8
  %29 = load i32, i32* %28, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %25
  %32 = load i32, i32* @INPUT_DELETE, align 4
  br label %35

33:                                               ; preds = %25
  %34 = load i32, i32* @INPUT_CANCEL, align 4
  br label %35

35:                                               ; preds = %33, %31
  %36 = phi i32 [ %32, %31 ], [ %34, %33 ]
  store i32 %36, i32* %3, align 4
  br label %41

37:                                               ; preds = %2
  %38 = load i32, i32* @INPUT_CANCEL, align 4
  store i32 %38, i32* %3, align 4
  br label %41

39:                                               ; preds = %2
  %40 = load i32, i32* @INPUT_SKIP, align 4
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %39, %37, %35, %23
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i32 @key_to_value(%struct.key*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
